# Spaaace-CG

./: CMakeLists.txt  README.md  box.3d  cone.3d  e.3d  example.xml  file.xml  plane.3d  plane.xml  ring.3d  sis.xml  solarsystem.xml  solarsystlight.xml  solsyst.xml  sphere.3d  sphere.xml  teaparty.xml  teapot.3d  tinyxml2.cpp  torus.3d
Engine/: .action.cpp.swp  Shape.cpp  Shape.h  action.cpp  action.h  engine  engine.cpp  engine.h  group.cpp  light.cpp  light.h  main.cpp  material.cpp  parser.cpp  parser.h  patch.cpp  patch.h  shape.cpp  shape.h
Generator/: CMakeLists.txt  Vertex.cpp  box.cpp  box.h  cone.cpp  cone.h  cube.cpp  cube.h  generator  generator.cpp  main.cpp  plane.cpp  plane.h  point.cpp  point.h  sphere.3d  sphere.cpp  sphere.h  torus.cpp  torus.h  vertex.h
